--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Hux Blog
+title: All Blue Blog
 SEOTitle: 董傲的博客 | Hux Blog
 header-img: img/home-bg.jpg
 email: huxpro@gmail.com
